Fixed atamona stylings, added scrollbar styling for css states

--- a/src/components/Atamona.css
+++ b/src/components/Atamona.css
@@ -5,6 +5,7 @@
 #atamona-image {
   flex: 1;
   width: 40%;
+  max-height: 450px;
   min-width: 250px;
   border-radius: 15px;
   margin: 1rem;
